force-app/main/default/objects/Payment_Order__c/fields/Amount_without_Tax__c.field-meta.xml
<CustomField>
    <fullName>Amount_without_Tax__c</fullName>
    <formula>Amount__c - Amount__c*(18/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount without Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>