force-app/main/default/objects/Payment_Order__c/fields/CE_of_Student__c.field-meta.xml
<CustomField>
    <fullName>CE_of_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CE of Student</label>
    <referenceTo>Course_Enrollment__c</referenceTo>
    <relationshipLabel>Payment Orders</relationshipLabel>
    <relationshipName>Payment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>