force-app/main/default/objects/Payment_Order__c/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>Order Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>