force-app/main/default/objects/Payment_Order__c/fields/Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Paid_By__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Paid By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Orders</relationshipLabel>
    <relationshipName>Payment_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>