force-app/main/default/objects/Payment_Order__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <formula>TEXT( TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Date</label>
    <type>Text</type>
</CustomField>