force-app/main/default/objects/Payment_Order__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <externalId>true</externalId>
    <label>Transaction Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>