force-app/main/default/objects/Payment_Order__c/listViews/Payment_Order.listView-meta.xml
<ListView>
    <fullName>Payment_Order</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Amount_without_Tax__c</columns>
    <columns>CE_of_Student__c</columns>
    <columns>Gateway__c</columns>
    <columns>Order_Id__c</columns>
    <columns>Paid_By__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Transaction_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>Payment Order</label>
</ListView>